scss/style.scss
/////////////////////////////////////
/// VARIABLES
/////////////////////////////////////

// colors
$color-primary-1: hsl(0, 0%, 100%);
$color-primary-2: hsl(0, 0%, 0%);
$color-primary-3: hsl(0, 0%, 55%);
$color-primary-4: hsl(0, 0%, 41%);

// box-shadows
$box-shadow-1: hsla(0, 0%, 0%, 0.2) 0px 7px 29px 0px;

///////////////////////////////
/// MIXINS
///////////////////////////////
@mixin flex($x, $y, $gap) {
	display: flex;
	justify-content: $x;
	align-items: $y;
	gap: $gap;
}

@mixin respond($breakpoint) {
	@if $breakpoint ==phone-s {
		@media only screen and (max-width: 25em) {
			// 400px
			@content;
		}
	}
	@if $breakpoint ==phone {
		@media only screen and (max-width: 37.5em) {
			// 600px
			@content;
		}
	}

	@if $breakpoint ==tab-port {
		@media only screen and (max-width: 56.25em) {
			// 900px
			@content;
		}
	}

	@if $breakpoint ==tab-land-s {
		@media only screen and (max-width: 68.75em) {
			// 1100px
			@content;
		}
	}

	@if $breakpoint ==tab-land {
		@media only screen and (max-width: 75em) {
			// 1200px
			@content;
		}
	}
}

///////////////////////////////
/// UTILITY CLASSES
///////////////////////////////
.hidden {
	display: none;
}

.unhide {
	display: unset;
}

.invisible {
	opacity: 0;
	user-select: none;
}

.visible {
	opacity: 1;
	user-select: all;
}

/////////////////////////////////////
/// GLOBAL
/////////////////////////////////////
* {
	margin: 0;
	padding: 0;
	box-sizing: inherit;
	font-family: inherit;
}

html {
	box-sizing: border-box;
	font-size: 62.5%;

	@include respond(phone) {
		font-size: 50%;
	}
}

body {
	font-size: 1.5rem;
	// font-family: "Alata", sans-serif;
	font-family: "Josefin Sans", sans-serif;
}

/////////////////////////////////////
/// HEADER
/////////////////////////////////////
header {
	position: relative;
	height: 90vh;
	background-color: rgba(0, 0, 0, 0.3);
	background-blend-mode: darken;
	background-image: url("../images/desktop/image-hero.jpg");
	background-size: cover;

	@include respond(tab-port) {
		padding: 22rem 6.4rem;
	}

	@include respond(phone) {
		padding: 36rem 2.4rem;
		background-image: url("../images/mobile/image-hero.jpg");
	}
}

/////////////////////////////////////
/// NAVIGATION
/////////////////////////////////////
nav {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	padding: 3.2rem 12.6rem;
	font-family: "Alata", sans-serif;
	z-index: 100;
	background-color: hsla(0, 0%, 0%, 0.4);

	@include flex(space-between, center, 0);
	flex-wrap: wrap;

	@include respond(tab-port) {
		padding: 2.4rem 6.4rem;
	}

	img {
		order: -1;
		width: 16rem;
	}

	ul {
		list-style: none;

		@include flex(center, center, 2.4rem);

		@include respond(tab-port) {
			display: none;
		}
	}

	a {
		transition: all 450ms ease;

		&:link,
		&:visited {
			text-decoration: none;
			position: relative;
			color: $color-primary-1;
		}

		&::after {
			content: "";
			position: absolute;
			height: 2px;
			display: block;
			width: 0;
			top: 125%;
			left: 50%;
			transform: translateX(-50%);
			background-color: $color-primary-1;
			transition: width 450ms ease;
		}

		&:hover::after {
			width: 50%;
		}
	}

	button {
		border: none;
		border-radius: none;
		background: transparent;

		img {
			max-height: 2.4rem;
			width: min-content;
		}

		@include flex(center, center, 0);
		order: 1 !important;

		@include respond(tab-port) {
			display: unset !important;
		}
	}

	.menu-close {
		// display: none;
	}
}

/////////////////////////////////////
/// MOBILE NAV
/////////////////////////////////////
nav.mobile-nav {
	@include respond(tab-port) {
		transition: background-color 0.3s ease;
		bottom: 0;
		background-color: $color-primary-2;
		align-items: flex-start;
		flex-wrap: wrap;

		img {
			order: -1;
		}

		ul {
			display: flex;
			align-items: flex-start;
			flex-direction: column;
			flex-basis: 100%;
			order: 2;
			gap: 3.2rem;
		}

		a {
			font-size: 2.8rem;
			text-transform: uppercase;
			font-family: "Josefin Sans", sans-serif;
			letter-spacing: 2px;
		}

		button {
			order: 3;
		}
	}
}

/////////////////////////////////////
/// TYPOGRAPHY
/////////////////////////////////////
h1 {
	font-size: 5rem;
	max-width: 16ch;
	color: $color-primary-1;
	letter-spacing: 4px;
	padding: 3.2rem;
	border: 2px solid $color-primary-1;
	position: absolute;
	left: 12.6rem;
	top: 50%;
	transform: translateY(-50%);

	@include respond(tab-port) {
		left: 6.4rem;
	}

	@include respond(phone) {
		position: static;
		margin: 0 auto;
		width: 90%;
		font-size: 4.2rem;
	}

	@include respond(phone-s) {
		font-size: 3.2rem;
	}
}

h1,
h2,
h3,
h4 {
	font-family: "Josefin Sans", sans-serif;
	text-transform: uppercase;
	font-weight: 300;
}

/////////////////////////////////////
/// SECTIONS
/////////////////////////////////////
section {
	padding: 9.6rem 12.6rem;

	@include respond(tab-land) {
		padding: 7.2rem;
	}

	@include respond(tab-port) {
		padding: 6.4rem;
	}
}

.section-interactive {
	@include flex(center, flex-end, 0);
	padding: 9.6rem 4.8rem;

	@include respond(tab-land) {
		flex-direction: column;
		align-items: center;
		justify-content: center;
	}

	img {
		@include respond(tab-port) {
			max-width: 90%;
		}
	}

	.text-box {
		background-color: $color-primary-1;
		margin-left: -15vw;
		max-width: 52rem;
		padding: 6.4rem 6.4rem 0 6.4rem;
		@include flex(center, flex-start, 3.2rem);
		flex-direction: column;

		@include respond(tab-land) {
			text-align: center;
			margin: 0 auto;
		}

		@include respond(phone) {
			padding: 3.2rem 0 0 0;
		}

		h2 {
			font-size: 4.2rem;
			letter-spacing: 3px;
			line-height: 1.4;

			@include respond(phone) {
				font-size: 3.2rem;
			}
		}

		p {
			font-family: "Alata", sans-serif;
			color: $color-primary-3;
			line-height: 1.5;
		}
	}
}

.section-creations {
	.wrapper {
		@include flex(space-between, center, 2.4rem);
		flex-wrap: wrap;
		margin-bottom: 4.8rem;

		h2 {
			font-size: 3.2rem;
			line-height: 1;
		}

		a {
			transition: all 450ms ease;
			padding: 0.6rem 3.2rem;
			font-size: 1.4rem;
			border: 1px solid $color-primary-2;
			font-family: "Alata", sans-serif;
			text-transform: uppercase;
			color: $color-primary-2;
			letter-spacing: 3px;
			text-decoration: none;

			&:hover {
				color: $color-primary-1;
				background-color: $color-primary-2;
			}
		}
	}

	.container {
		@include flex(space-between, center, 3.2rem);
		flex-wrap: wrap;

		@include respond(tab-land) {
		}

		@include respond(tab-port) {
			justify-content: center;
		}

		.item {
			position: relative;
			height: 42rem;
			width: 22%;
			padding: 2.4rem;
			@include flex(flex-start, flex-end, 0);
			background-size: cover !important;

			@include respond(tab-land) {
				width: 30%;
			}

			@include respond(tab-port) {
				width: 45%;
			}

			@include respond(phone) {
				width: 100%;
				height: 18rem;
			}

			&::after {
				transition: all 450ms ease;
				content: "";
				position: absolute;
				bottom: 0;
				left: 0;
				right: 0;
				height: 50%;
				background: linear-gradient(
					180deg,
					transparent 1%,
					rgba(0, 0, 0, 0.6) 100%
				);
			}

			&:hover {
				cursor: pointer;
				background-image: hsla(0, 0%, 100%, 0.2);

				h3 {
					color: black;
					font-weight: 700;
				}

				&::after {
					background: hsla(0, 0%, 100%, 0.75);
					height: 100%;
				}
			}

			h3 {
				color: $color-primary-1;
				font-size: 2.6rem;
				max-width: 70%;
				z-index: 50;
			}
		}

		.item:nth-child(1) {
			background-image: url(../images/desktop/image-deep-earth.jpg);
		}

		.item:nth-child(2) {
			background-image: url(../images/desktop/image-night-arcade.jpg);
		}

		.item:nth-child(3) {
			background-image: url(../images/desktop/image-soccer-team.jpg);
		}

		.item:nth-child(4) {
			background-image: url(../images/desktop/image-grid.jpg);
		}

		.item:nth-child(5) {
			background-image: url(../images/desktop/image-from-above.jpg);
		}

		.item:nth-child(6) {
			background-image: url(../images/desktop/image-pocket-borealis.jpg);
		}

		.item:nth-child(7) {
			background-image: url(../images/desktop/image-curiosity.jpg);
		}

		.item:nth-child(8) {
			background-image: url(../images/desktop/image-fisheye.jpg);
		}
	}
}

/////////////////////////////////////
/// FOOTER
/////////////////////////////////////
footer {
	@include flex(space-between, center, 0);
	background-color: $color-primary-2;
	padding: 4.8rem;
	color: $color-primary-1;
	font-family: "Alata", sans-serif;

	@include respond(tab-port) {
		flex-direction: column;
		justify-content: center;
		align-items: center;
		gap: 4.8rem;
	}

	.wrapper-links {
		@include flex(center, flex-start, 1.6rem);
		flex-direction: column;

		@include respond(tab-port) {
			align-items: center;
		}

		img {
			@include respond(tab-port) {
				margin-bottom: 2.4rem;
			}
		}
	}

	.links {
		@include flex(flex-start, flex-start, 2.4rem);

		@include respond(tab-port) {
			align-items: center;
			justify-content: center;
			flex-direction: column;
		}

		a {
			transition: all 450ms ease;

			&:link,
			&:visited {
				text-decoration: none;
				position: relative;
				color: $color-primary-1;
			}

			&::after {
				content: "";
				position: absolute;
				height: 2px;
				display: block;
				width: 0;
				top: 125%;
				left: 50%;
				transform: translateX(-50%);
				background-color: $color-primary-1;
				transition: width 450ms ease;
			}

			&:hover::after {
				width: 50%;
			}
		}
	}

	.wrapper-socials {
		@include flex(center, flex-end, 1.6rem);
		flex-direction: column;

		@include respond(tab-port) {
			align-items: center;
		}
	}

	.socials {
		a {
			text-decoration: none;
			color: $color-primary-1;
			font-size: 2.8rem;
			transition: all 450ms ease;

			&:hover {
				color: $color-primary-3;
			}
		}
	}

	.copyright {
		color: $color-primary-3;
	}
}

/////////////////////////////////////
/// ATTRIBUTION
/////////////////////////////////////
.attribution {
	font-size: 11px;
	text-align: center;
}

.attribution a {
	color: hsl(228, 45%, 44%);
}

// SPACING SYSTEM (px)
// 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128

// FONT SIZE SYSTEM (px)
// 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

